// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`formatRouteStoneEmit given: [case-overrule-judge] an overrule of the judge rung when: [t0] format is called with level = JUDGE_LEVEL then: snapshot matches 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.plan
   └─ ✓ overruled
      └─ judge, overruled"
`;

exports[`formatRouteStoneEmit given: [case-overrule-peer-judge-ready] an overrule of a peer level where the JUDGE becomes ready when: [t0] format is called with readyLevel = JUDGE_LEVEL then: snapshot matches 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.plan
   └─ ✓ overruled
      ├─ level 3, overruled
      └─ judge, ready"
`;

exports[`formatRouteStoneEmit given: [case-overrule-scoped] a level-scoped overrule when: [t0] format is called with a level and a ready-next level then: snapshot matches 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.plan
   └─ ✓ overruled
      ├─ level 1, overruled
      └─ level 3, ready"
`;

exports[`formatRouteStoneEmit given: [case1] challenge:absent action when: [t0] formatRouteStoneEmit called with challenge:absent then: snapshot matches vision 1`] = `
"🦉 the way speaks for itself

🍂 what have you seen?
   ├─ ...
   │
   ├─ the articulation is absent
   │  └─ .behavior/v2026_03_08.feature/review/self/for.3.1.blueprint._.design.md
   │
   ├─ a promise without words
   │  ├─ is not a promise
   │  └─ it is a daydream
   │
   └─ the way asks
      ├─ write what you found
      ├─ write what you didn't
      └─ then return 🍵

🌕 lets reflect
   │
   ├─ review.self 1/3
   │  ├─ slug = design
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  have you grounded the design in reality?
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  ├─ .behavior/v2026_03_08.feature/review/self/for.3.1.blueprint._.design.md
   │  │  └─ the guard looks precisely here, write exactly to this path
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 3.1.blueprint --as promised --that design \\
         --into .behavior/v2026_03_08.feature/review/self/for.3.1.blueprint._.design.md"
`;

exports[`formatRouteStoneEmit given: [case1] challenge:absent action when: [t1] formatRouteStoneEmit called with challenge:unasked then: snapshot matches vision 1`] = `
"🦉 the way speaks for itself

🍃 no ask on record
   │
   ├─ this review was never asked for, or its ask was rewound
   │  ├─ stone = 3.1.blueprint
   │  └─ slug  = design
   │
   ├─ a promise answers an ask. with no ask, two gates cannot run —
   │  the freshness bar has no date to measure, and the haste cue has no start
   │
   ├─ ask for it, and the guard hands you the path
   │  └─ rhx route.stone.set --stone 3.1.blueprint --as passed
   │
   └─ then promise again 🍵"
`;

exports[`formatRouteStoneEmit given: [case2] unguarded stone, passage allowed when: [t0] format is called then: snapshot matches 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed (unguarded)
   │
   └─ the way continues, run
      └─ rhx route.drive"
`;

exports[`formatRouteStoneEmit given: [case3] unguarded stone, passage blocked when: [t0] format is called then: snapshot matches 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   └─ reason = blockers exceed threshold"
`;

exports[`formatRouteStoneEmit given: [case4] guarded stone, passage allowed when: [t0] format is called then: snapshot matches 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 3.blueprint
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ 3.blueprint.md
   │  ├─ reviews
   │  │   └─ r1: review (l1, 1/∞)
   │  │       ├─ approved 1.5s
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       └─ given: review.md
   │  └─ judges
   │      └─ j1: judge cmd
   │          └─ finished 0.5s ✓
   │
   └─ the way continues, run
      └─ rhx route.drive"
`;

exports[`formatRouteStoneEmit given: [case5] guarded stone, passage blocked when: [t0] format is called then: snapshot matches 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 3.blueprint
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold
   └─ guard
      ├─ artifacts
      │   └─ 3.blueprint.md
      ├─ reviews
      │   └─ r1: review (l1, 1/∞)
      │       ├─ rejected 1.5s
      │       ├─ 3 blockers 🔴
      │       ├─ 1 nitpick 🟠
      │       └─ given: review.md
      └─ judges
          └─ j1: judge cmd
              ├─ finished 0.5s ✗
              └─ reason: blockers exceed threshold"
`;

exports[`formatRouteStoneEmit given: [case5b] guarded stone, a review tallied by the sub-brain fallback when: [t0] format is called with a probabilistic review then: snapshot matches 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 3.blueprint
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ 3.blueprint.md
   │  ├─ reviews
   │  │   └─ r1: review (l1, 1/∞)
   │  │       ├─ rejected 1.5s
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 1 nitpick 🟠
   │  │       ├─ tallied by reviewer@fireworks/deepseek/v4-flash
   │  │       └─ given: review.md
   │  └─ judges
   │      └─ j1: judge cmd
   │          └─ finished 0.5s ✓
   │
   └─ the way continues, run
      └─ rhx route.drive"
`;

exports[`formatRouteStoneEmit given: [case6] blocked action (agent tried to approve) when: [t0] format is called with blocked action then: snapshot matches 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ ✗ only humans can approve
   │
   └─ as a driver, you should:
         ├─ \`--as passed\` to signal work complete, proceed
         ├─ \`--as arrived\` to signal work complete, request review
         ├─ \`--as conceded\` to take a reviewer concern and repair it
         ├─ \`--as disputed\` to escalate ONE concern to the council
         └─ \`--as blocked\` to escalate a genuine wall

      🟡 a peer's feedback you have not absorbed is not a wall. absorb each
         concern it raised — concede it, or dispute it.

      the human will run \`--as approved\` when ready."
`;

exports[`formatRouteStoneEmit given: [case7] route.stone.add plan mode when: [t0] format is called with plan mode then: snapshot matches 1`] = `
"🦉 another stone on the path

🗿 route.stone.add --mode plan
   ├─ stone  = 3.1.6.research.custom
   ├─ route  = .behavior/v2026_04_12.myroute
   ├─ source = @stdin
   ├─ preview
   │  ├─
   │  │
   │  │  investigate X:
   │  │  - what is X?
   │  │  - how does X relate to our wish?
   │  │
   │  └─
   └─ ✋ created = false, rerun with --mode apply to execute"
`;

exports[`formatRouteStoneEmit given: [case8] route.stone.add apply mode when: [t0] format is called with apply mode then: snapshot matches 1`] = `
"🦉 another stone on the path

🗿 route.stone.add --mode apply
   ├─ stone  = 3.1.6.research.custom
   ├─ route  = .behavior/v2026_04_12.myroute
   └─ created = .behavior/v2026_04_12.myroute/3.1.6.research.custom.stone
      └─ the way continues, run \`rhx route.drive\`"
`;
